# crew_jira_connector

./: .dockerignore  .env.example  .gitignore  Containerfile  README.md  __init__.py  ai_classifier.py  app.py  compose.yaml  config.py  config.yaml  crew_client.py  db.py  epic_planner.py  fix_prompt.py  gherkin_extractor.py  keycloak_auth.py  pyproject.toml  pytest.ini  requirements.txt  status_poller.py  validators.py  webhook_handler.py
.github/workflows/: build-push-ghcr.yml  test.yml
jira_backends/: __init__.py  atlassian_mcp.py  base.py  local_mcp.py  rest_backend.py
tests/: __init__.py  conftest.py  test_api.py  test_db.py  test_gherkin_extractor.py  test_validators.py
tests/api/: test_webhook_endpoint.py
tests/e2e/: test_jira_to_job.py
tests/features/: gherkin_extraction.feature  input_validation.feature  mode_detection.feature  status_sync.feature  webhook_processing.feature
tests/unit/: test_ai_classifier.py  test_create_issue.py  test_crew_client.py  test_epic_planner.py  test_rest_backend.py  test_status_poller.py  test_webhook_handler.py
